# personal-utilities

./: .pre-commit-config.yaml  .releaserc.yml  Dangerfile  cli.py  pyproject.toml
.github/workflows/: danger.yml  pull_request.yml  release.yml
src/: cli.py  constants.py
src/password_generator/: password_generator.py
tests/: conftest.py  test__cli.py
tests/password_generator/: test__password_generator.py
